objects/Chatter_Answers_Design__c.object
<CustomObject>
    <fields>
        <fullName>Background_Color__c</fullName>
        <defaultValue>&apos;#F4EAD5&apos;</defaultValue>
        <label>Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buttons_Color__c</fullName>
        <defaultValue>&apos;#E94E77&apos;</defaultValue>
        <label>Buttons Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buttons_Text_Color__c</fullName>
        <defaultValue>&apos;#FFFFFF&apos;</defaultValue>
        <label>Buttons Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_Background_Color__c</fullName>
        <defaultValue>&apos;#C6E5D9&apos;</defaultValue>
        <label>Comments Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Highlight_Color__c</fullName>
        <defaultValue>&apos;#E94E77&apos;</defaultValue>
        <label>Criteria Highlight Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Highlight_Text_Color__c</fullName>
        <defaultValue>&apos;#FFFFFF&apos;</defaultValue>
        <label>Criteria Highlight Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Support_Tag_Text_Color__c</fullName>
        <defaultValue>&apos;#FFC000&apos;</defaultValue>
        <label>Customer Support Tag Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Content_Text_Color__c</fullName>
        <defaultValue>&apos;#222222&apos;</defaultValue>
        <label>Left Content Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Links_Color__c</fullName>
        <defaultValue>&apos;#D68189&apos;</defaultValue>
        <label>Links Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_More_Background_Color__c</fullName>
        <defaultValue>&apos;#C4C7A9&apos;</defaultValue>
        <label>Show More Background Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topics_Highlight_Color__c</fullName>
        <defaultValue>&apos;#C4E7F2&apos;</defaultValue>
        <label>Topics Highlight Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topics_Highlight_Text_Color__c</fullName>
        <defaultValue>&apos;#1797C0&apos;</defaultValue>
        <label>Topics Highlight Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Chatter Answers Design</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Design Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Answers Designs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>